--- a/recipes/style.css
+++ b/recipes/style.css
@@ -8,10 +8,15 @@
 .Lasagna:hover{
     background-color: black;
     color: whitesmoke;
+    padding: 60px;
+    border-radius: 12px;
 }
 img{
     display: block;
+    width: 1000px;
+    height: auto;
     margin: auto;
+
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 h3, h4 {
@@ -49,5 +54,9 @@ h3, h4 {
 }
 
 .image{
-    margin-left: 30px;
+    margin-left: 50px;
+    width: 300px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: block;
 }
