--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 h1 {
     font-size: 2.5rem;
     color: #d2691e;
-    margin-bottom: 20px;
+    margin: 0 auto;
     text-align: center;
     text-transform: uppercase;
 }
